# fractal-cpp

./: .gitignore  CMakeLists.txt  README.md  composite.py
src/: main.cpp
